<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar_contato"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText android:id="@+id/nomeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_seu_nome"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        />

    <EditText android:id="@+id/idadeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_sua_idade"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/nomeEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        />

    <Button android:id="@+id/btnSalvar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        app:layout_constraintTop_toBottomOf="@id/idadeEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCarregar"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />

    <Button android:id="@+id/btnCarregar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/carregar"
        app:layout_constraintStart_toEndOf="@id/btnSalvar"
        app:layout_constraintTop_toBottomOf="@id/idadeEditText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />

    <TextView android:id="@+id/displayTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nenhum_contato_salvo_ainda"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="#F0C3C3"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btnSalvar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:padding="10dp"
        />





  </androidx.constraintlayout.widget.ConstraintLayout>